ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    alb.ingress.kubernetes.io/subnets: subnet-029351f9f418da650,subnet-0335bc712f62d20df,subnet-029351f9f418da650
spec:
  controller: eks.amazonaws.com/alb
